--- a/js/mean/app/angular-src/src/app/app.component.html
+++ b/js/mean/app/angular-src/src/app/app.component.html
@@ -3,5 +3,6 @@
 </h1> -->
 <app-navbar></app-navbar>
 <div class="container">
+  <flash-messages></flash-messages>
   <router-outlet></router-outlet>
 </div>
