--- a/js/mean/app/angular-src/src/app/components/home/home.component.html
+++ b/js/mean/app/angular-src/src/app/components/home/home.component.html
@@ -1,3 +1,23 @@
-<p>
-  home works!
-</p>
+<div class="jumbotron text-center">
+  <h1>MEAN Authentification Application</h1>
+  <p class="lead">Welcome to our custom MEAN authentification application build from a scratch.</p>
+  <div>
+    <a class="btn btn-primary" [routerLink] = "['/register']">Register</a>
+    <a class="btn btn-default" [routerLink] = "['/login']">Login</a>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-md-4">
+    <h3>Express Backend</h3>
+    <p>A rock solid Node.js / Express.js server uses Mongoose to organize models and queries for a database.</p>
+  </div>
+  <div class="col-md-4">
+    <h3>Angular CLI</h3>
+    <p>Angular CLI to generate componenets, services and more. Local development server and easy compilation.</p>
+  </div>
+  <div class="col-md-4">
+    <h3>JWT Tokens</h3>
+    <p>Full featured authorization using JSON web tokens. Possibility to login and store user data.</p>
+  </div>
+</div>
