--- a/js/mean/app/angular-src/src/app/components/navbar/navbar.component.html
+++ b/js/mean/app/angular-src/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark bg-primary">
   <a class="navbar-brand" [routerLink]="['/']">MEAN Auth App</a>
 
   <button class="navbar-toggler"
