--- a/js/mean/app/angular-src/src/app/components/home/home.component.html
+++ b/js/mean/app/angular-src/src/app/components/home/home.component.html
@@ -3,7 +3,7 @@
   <p class="lead">Welcome to our custom MEAN authentification application build from a scratch.</p>
   <div>
     <a class="btn btn-primary" [routerLink] = "['/register']">Register</a>
-    <a class="btn btn-default" [routerLink] = "['/login']">Login</a>
+    <a class="btn btn-secondary" [routerLink] = "['/login']">Login</a>
   </div>
 </div>
 
