Some mistakes fixes;

--- a/js/mean/app/angular-src/src/app/components/home/home.component.html
+++ b/js/mean/app/angular-src/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="jumbotron text-center">
-  <h1>MEAN Authentification Application</h1>
-  <p class="lead">Welcome to our custom MEAN authentification application build from a scratch.</p>
+  <h1>MEAN Authentication Application</h1>
+  <p class="lead">Welcome to our custom MEAN authentication application build from a scratch.</p>
   <div>
     <a class="btn btn-primary" [routerLink] = "['/register']">Register</a>
     <a class="btn btn-secondary" [routerLink] = "['/login']">Login</a>
@@ -14,7 +14,7 @@
   </div>
   <div class="col-md-4">
     <h3>Angular CLI</h3>
-    <p>Angular CLI to generate componenets, services and more. Local development server and easy compilation.</p>
+    <p>Angular CLI to generate components, services and more. Local development server and easy compilation.</p>
   </div>
   <div class="col-md-4">
     <h3>JWT Tokens</h3>
