--- a/js/mean/app/angular-src/src/app/components/navbar/navbar.component.html
+++ b/js/mean/app/angular-src/src/app/components/navbar/navbar.component.html
@@ -26,13 +26,32 @@
     </ul>
 
     <ul class="navbar-nav justify-content-end">
-      <li class="nav-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
+      <li *ngIf="_authService.loggedIn()"
+          class="nav-item"
+          [routerLinkActive]="['active']"
+          [routerLinkActiveOptions]="{exact:true}">
+        <a class="nav-link" [routerLink]="['/dashboard']">Dashboard</a>
+      </li>
+      <li *ngIf="_authService.loggedIn()"
+          class="nav-item"
+          [routerLinkActive]="['active']"
+          [routerLinkActiveOptions]="{exact:true}">
+        <a class="nav-link" [routerLink]="['/profile']">Profile</a>
+      </li>
+      <li *ngIf="!_authService.loggedIn()"
+          class="nav-item"
+          [routerLinkActive]="['active']"
+          [routerLinkActiveOptions]="{exact:true}">
         <a class="nav-link" [routerLink]="['/login']">Login</a>
       </li>
-      <li class="nav-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
+      <li *ngIf="!_authService.loggedIn()"
+          class="nav-item"
+          [routerLinkActive]="['active']"
+          [routerLinkActiveOptions]="{exact:true}">
         <a class="nav-link" [routerLink]="['/register']">Register</a>
       </li>
-      <li class="nav-item">
+      <li *ngIf="_authService.loggedIn()"
+          class="nav-item">
         <a class="nav-link" (click)="onLogoutClick()" href="#">Logout</a>
       </li>
     </ul>
